<resources>
    <string name="app_name">InventoryDetails</string>
    <string name="example">Example</string>
    <string name="details">Details</string>
    <string name="item_name">Item Name</string>
    <string name="dealer">Dealer</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
